Fix white spacing between contents.

--- a/app/assets/stylesheets/api/board_index_item.scss
+++ b/app/assets/stylesheets/api/board_index_item.scss
@@ -7,8 +7,9 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  justify-content: center;
+  //justify-content: center;
   min-width: 550px; 
+  height: 1000px;
 }
 
 .board-index {
@@ -18,7 +19,7 @@
   justify-content: center;
   color: #333333;
   flex-wrap: wrap;
-  //width: 648px;
+  margin: 0 auto;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -101,6 +102,7 @@
     font-size: 20px;
     margin: 0px;
     display: flex;
+    margin-top: 4px !important;
   }
 
   .b-index-pincount {
