--- a/app/assets/stylesheets/api/pin_index.scss
+++ b/app/assets/stylesheets/api/pin_index.scss
@@ -247,11 +247,12 @@
 ///////////////////////////////////////////////////
 .pin-index-container {
   position: relative;
-  top: 72px;
+  top: 52px;
   column-count: 7;
   column-gap: 24px;
   margin: 0 24px 24px 24px;
   z-index: 0;
+  //height: 2000px;
 }
 
 .pin-index-box {
